--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">YIFY clean architecture</string>
-
+    <string name="trailer">Trailer</string>
     <string-array name="options">
         <item>Seeds</item>
         <item>Download count</item>
